--- a/app/views/layouts/_form_search.html.erb
+++ b/app/views/layouts/_form_search.html.erb
@@ -1,4 +1,4 @@
 <%= form_tag('/games', method: 'get', role: 'search', class: 'form-group', id: 'search-wrapper') do %>
-  <%= text_field_tag 'search_main', nil, placeholder: 'Search for a game or a studio', class:'form-control', id: 'search-bar' %>
+  <%= text_field_tag 'search_main', nil, placeholder: 'Search Games...', class:'form-control', id: 'search-bar' %>
   <%= submit_tag 'Search', class:'btn btn-default pop ', name: nil, style: "display:none" %>
 <% end %>
