--- a/app/views/layouts/_nav_admin.html.erb
+++ b/app/views/layouts/_nav_admin.html.erb
@@ -30,8 +30,8 @@
                     </ul>
                   </li>
                   <li class="game-search">
+                    <div class="nav-search">   <%= render 'layouts/form_search' %>
                     <span class="glyphicon glyphicon-search text-right" id="search"></span>
-                    <%= render 'layouts/form_search' %>
                   </li>
             </ul>
         </div>
