--- a/app/views/layouts/_nav_dev.html.erb
+++ b/app/views/layouts/_nav_dev.html.erb
@@ -25,10 +25,7 @@
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-              <li class="game-search">
-                  <span class="glyphicon glyphicon-search text-right fade-in" id="search"></span>
-                  <%= render 'layouts/form_search' %>
-              </li>
+
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" style="color: white" aria-expanded="false">
                   <span class="caret"></span>My Profile
@@ -38,6 +35,10 @@
                   <li><%= link_to "Upload", new_game_path %></li>
                   <li><%= link_to "Sign Out", sessions_path, method: :delete %></li>
                 </ul>
+              </li>
+              <li class="game-search">
+                  <div class="nav-search"> <%= render 'layouts/form_search' %> </div>
+                  <span class="glyphicon glyphicon-search fade-in" id="search"></span>
               </li>
             </ul>
         </div>
