add user show page and link to dashboard

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -78,6 +78,7 @@ input#file-display.input-large.uneditable-input {
 }
 
 #dev-info {
+  color: black;
   background-color: white;
   opacity: 0.7;
   width: 100%;
