--- a/app/views/layouts/_nav_dev.html.erb
+++ b/app/views/layouts/_nav_dev.html.erb
@@ -34,7 +34,7 @@
                   <span class="caret"></span>My Profile
                 </a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to "Game Overview", games_path %></li>
+                  <li><%= link_to "Dashboard", user_path(current_user) %></li>
                   <li><%= link_to "Upload", new_game_path %></li>
                   <li><%= link_to "Sign Out", sessions_path, method: :delete %></li>
                 </ul>
