minor code refactors

--- a/app/views/layouts/_nav_gamer.html.erb
+++ b/app/views/layouts/_nav_gamer.html.erb
@@ -1,4 +1,4 @@
-<div class="container topnav">
+<div class="container">
   <nav class="navbar navbar-inverse">
     <div class="container-fluid" id="nav-wrapper">
         <div class="navbar-header">
