--- a/app/views/layouts/_nav_gamer.html.erb
+++ b/app/views/layouts/_nav_gamer.html.erb
@@ -21,7 +21,14 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span>My Profile</a>
                   <ul class="dropdown-menu">
-                    <li><%= link_to "Some Stuff", home_index_path %></li>
+                    <% if user_is_dev? %>
+                      <li><%= link_to "Game Overview", games_path %></li>
+                      <li><%= link_to "Upload", new_game_path %></li>
+                    <% end %>
+                    <% if user_is_admin? %>
+                      <li><%= link_to "Review Games", games_path %></li>
+                      <li><%= link_to "Messages", messages_path %></li>
+                    <% end %>
                     <li><%= link_to "Sign Out", sessions_path, method: :delete %></li>
                   </ul>
                 </li>
