consolidate game show page

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -74,7 +74,7 @@
     <% end %>
 
     <div class="container">
-    <div class="back-btn-update"><%= button_to "Back", games_path, class:"orange" %></div>
+    <!-- <div class="back-btn-update"><%= button_to "Back", games_path, class:"orange" %></div> -->
    </div>
 
 
