--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -24,13 +24,7 @@
         </div>
       </div>
       <div class="col-sm-9">
-        <% if user_is_admin? %>
-          <%= render 'index_admin' %>
-        <% elsif user_is_dev? %>
-          <%= render 'index_dev' %>
-        <% else %>
-          <%= render 'index_gamer' %>
-        <% end %>
+          <%= render 'index' %>
       </div>
     </div>
   </div>
