--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -46,6 +46,7 @@
 .container-index-games {
   background: rgb(0, 60, 97);
   margin-top: 80px;
+  margin-bottom: 20px;
   padding: 20px;
   padding-bottom: 20px;
   color:#9ca3b5;
@@ -182,10 +183,20 @@ input#search_user {
   color: #075982;
 }
 
+.gamer-details-author{
+  height: 4rem;
+  margin-bottom: 0px;
+  overflow: hidden;
+}
 .gamer-details-author a {
+  display: block;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
   color: #333;
   font-size: 12px;
   text-decoration: none;
+  margin-left: 2rem;
 }
 
 .gamer-details-author a:hover {
@@ -193,8 +204,9 @@ input#search_user {
   text-decoration: underline;
 }
 
-.gamer-details p {
-  font-size: 1.2em;
+.gamer-details-author p {
+  font-size: 1.2rem;
+  line-height: 1.7rem;
 }
 
 .pagination {
@@ -367,20 +379,16 @@ p.control-group {
 
 // Styling game upload/edit form
 
-.tag-wrapper{
-  padding: 10px 10px;
-  background: rgba(187, 213, 224, 0.65);
-  overflow: hidden;
-  clear:both;
-}
-
 .tag-boxes {
+  max-height: 3.4em;
+  width: 100%;
   float: left;
   padding: 3px 7px;
-  color: #003c61;
-  background: rgba(0, 60, 97, 0.15);
+  background: #003c61;
   font-size: 10px;
-  margin: 3px;
+  margin: 0 0 .5em 0;
+  color: #c9ceda;
+  overflow: hidden;
 }
 
 p.control-group{
@@ -445,11 +453,15 @@ option {
   padding-bottom: 0.2rem;
 }
 
-.game-title-header{
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+.game-title-header {
+  height:3.8em;
+  margin: .5em .5em 0 .5em;
+  padding: 0;
+  a{
+    padding: 0;
+  }
 }
+
 
 .grid-spacing{
   margin-bottom: 5rem;
@@ -488,4 +500,114 @@ option {
 
 .btn-approved {
   background-color: green;
+}
+
+.panel-result {
+  background: #92c9e1;
+  border-bottom: solid 4px $pink;
+  min-height: 35rem;
+  margin-bottom: 20px;
+  position: relative;
+  filter: alpha(opacity=50);
+	opacity: 0.5;
+  color: #333;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  @include box-shadow(-3px, 3px, 21px, rgba(#242424, 0.25));
+
+  &.padding-zero {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .img {
+    @include box-shadow(-3px, 3px, 21px, rgba(#242424, 0.65));
+    img {
+      width: 100%;
+    }
+  }
+
+  .status{
+    position: absolute;
+    bottom: 0px;
+    width: 91%;
+  }
+}
+ #padding-zero{
+  padding-left: 0;
+  padding-right: 0;
+}
+@keyframes Items{
+  0%{
+    filter: alpha(opacity=0);
+  	opacity: 0;
+    transform: scale(0.3) rotateY(90deg);
+  }
+
+  70%{
+    transform: scale(0.9) rotateY(90deg);
+      height: 0%;
+  }
+
+  100%{
+    filter: alpha(opacity=100);
+  	opacity: 1;
+  }
+}
+ .overlay-btn{
+   position: absolute;
+   top:0;
+   width: 100%;
+ }
+ .panel-img{
+   position: relative;
+ }
+
+.panel-result.is-visible{
+    filter: alpha(opacity=100);
+    opacity: 1;
+    animation: Items 200ms ease-in
+}
+
+@media screen and (max-width: 750px) {
+  .game-title-header{
+
+  }
+
+  .footer a{
+    float: none;
+  }
+}
+@media screen and (max-width: 400px) {
+  .game-title-header {
+    height:auto;
+    margin: .5rem .5rem 0 .5rem;
+    padding: 0;
+    a{
+      padding: 0;
+    }
+  }
+
+  .tag-boxes {
+    max-height:none;
+  }
+  .panel-result {
+    height: auto;
+  }
+
+  .gamer-details-author{
+    height: auto;
+    overflow: auto;
+  }
+  .gamer-details-author a {
+    display: inline-block;
+    white-space: normal;
+    overflow: auto;
+  }
+
+  .gamer-details-author p {
+    font-size: 1.2rem;
+    line-height: 1.7rem;
+  }
+
 }
