--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -44,10 +44,8 @@
                       <div class='two'>
                         <h3 class='game-title'> No Games, Please Upload a Game </h3>
                         <%= link_to 'New Game', new_game_path, class: "btn btn-default btn-lg pop btn" %>
-                      <% end %>
                     </div>
-                  <% if @games.present? %>
-                  <h1 class="games-index-h1"></h1>
+                  <% else %>
                   <% @games.each do |g|  %>
                   <div class="wrapper">
                       <div class="one"><%= display_picture g %>
