--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -40,7 +40,7 @@
       position: absolute;
       top: 0rem;
       border-style: solid;
-      border-width: 0.8rem 0rem 0.8rem 0.95rem;
+      border-width: 0.7rem .7rem 0.8rem 0.7rem;
       border-color: transparent transparent transparent #919da2;
     }
   }
@@ -218,19 +218,15 @@ input#search_user {
 }
 
 .gamer-details-author{
-  height: 4rem;
-  margin-bottom: 0px;
-  overflow: hidden;
-}
-.gamer-details-author a {
-  display: block;
+  color: #428bca;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  color: #333;
+}
+.gamer-details-author a {
+  margin-left: 6rem;
   font-size: 1.2rem;
   text-decoration: none;
-  margin-left: 2rem;
 }
 
 .gamer-details-author a:hover {
@@ -520,7 +516,6 @@ option {
 .panel-result {
   background: #92c9e1;
   border-bottom: solid 4px $pink;
-  min-height: 35rem;
   margin-bottom: 20px;
   position: relative;
   filter: alpha(opacity=50);
@@ -594,7 +589,7 @@ option {
   }
   .game-details{
     a{
-          font-size: 1.2rem;
+      font-size: 1.2rem;
     }
   }
   .game-details-madeby{
@@ -605,6 +600,15 @@ option {
       }
     }
   }
+  .gamer-details-author{
+    height: auto;
+    overflow: auto;
+    white-space: normal;
+  }
+  .gamer-details-author a {
+    font-size: 1em;
+    margin-left: 7rem;
+  }
 }
 
 @media screen and (max-width: 750px) {
@@ -612,6 +616,14 @@ option {
     height:auto;
     overflow:visible;
     font-size: 1.6em;
+  }
+  .gamer-details-author{
+    height: auto;
+    overflow: auto;
+    white-space: normal;
+  }
+  .gamer-details-author a {
+    font-size: 1em;
   }
 
   .footer a{
@@ -642,27 +654,13 @@ option {
 
   .gamer-details-author{
     height: auto;
-    overflow: auto;
-  }
-  .gamer-details-author a {
-    font-size: 1em;
     display: inline-block;
     white-space: normal;
     overflow: auto;
   }
+  .gamer-details-author a {
+    font-size: 1em;
+    margin-left: 7rem;
+  }
 
-  .gamer-details-author p {
-    font-size: 1.2rem;
-    line-height: 1.7rem;
-  }
-  .game-details-state{
-    span{
-      font-size: 1em;
-    }
-  }
-  .game-details-madeby{
-    span{
-      font-size: 1em;
-    }
-  }
 }
